# harness_mcp

./: README.md  main.py  pyproject.toml
mcp_configs/: mcp.json
servers/: agent_server.py  llm_server.py
tests/: call_agent_mcp.py  call_llm_mcp_http.py  call_mcp_http.py  ollama_cloud.py
